openshift/config/deployment-openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          # This image will be overwritten by the update-deployment Task
          image: myapp:latest
          ports:
            - containerPort: 3000
              protocol: TCP
