openshift/config/route-openshift.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: myapp
    weight: 100
